# zig-ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  build.zig.zon
.github/workflows/: release.yml
assets/: icon.rc
scripts/: build-windows.ps1
src/: agent.zig  audio.zig  builtin.zig  channel.zig  config.zig  jinja.zig  launcher.zig  log_capture.zig  main.zig  manifest.zig  mcp.zig  models.zig  settings_store.zig  state.zig  tests.zig
src/backends/: accel.zig  chat_client.zig  downloader.zig  llama.zig  sd.zig  tts.zig  video.zig
src/codecs/: codecs.c  codecs.zig  codecs_h264.c  codecs_mp4.c
src/server/: api.zig  chat_parser.zig
src/ui/: audio.zig  chat.zig  downloader.zig  editor.zig  image.zig  logs.zig  markdown.zig  mcp_view.zig  model_browser.zig  settings.zig  shell.zig  tasks.zig  video.zig  widgets.zig
